export const snapshot = {};

snapshot[`constant union 1`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      anyOf: [
        {
          enum: [
            "Hello",
            "world!",
          ],
          type: "string",
        },
        {
          enum: [
            42,
            420,
          ],
          type: "number",
        },
      ],
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`constant union 2`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      anyOf: [
        {
          enum: [
            "Hello",
            "world!",
          ],
          type: "string",
        },
        {
          enum: [
            42,
            420,
          ],
          type: "number",
        },
      ],
      description: "Description one.",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`constant union 3`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      anyOf: [
        {
          enum: [
            "Hello",
            "world!",
          ],
          type: "string",
        },
        {
          enum: [
            42,
            420,
          ],
          type: "number",
        },
      ],
      description: "Description two. Description one.",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;
